# code-light

./: .gitignore  LICENSE  README.md  README.zh-CN.md  main.py  pyproject.toml  uv.toml
build_specs/: code-light.spec
dashboard/templates/: base.html  index.html
packaging/: README.txt  build_exe.bat  pyinstaller_entry.py  run_code_light.bat
src/code_light/: __init__.py  __main__.py  app.py  config.py  models.py  state.py
src/code_light/monitors/: __init__.py  base.py  claude_code.py  codex.py  process.py
src/code_light/services/: __init__.py  quota.py  token_counter.py  vscode.py
src/code_light/ui/: __init__.py  dashboard.py  floating.py  tray.py
src/code_light/utils/: logger.py  windows.py
tests/: test_monitors.py
