[project]
name = "code-light"
version = "0.2.0"
description = "Lightweight desktop status monitoring for AI coding workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "code-light contributors"}
]
keywords = ["ai", "coding", "monitoring", "claude", "codex", "vscode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pyjwt>=2.13.0",
    "pystray>=0.19.5",
    "pywebview>=6.2.1",
    "pywin32>=311",
    "watchdog>=6.0.0",
]

[project.scripts]
code-light = "code_light.__main__:main"

[project.urls]
Homepage = "https://github.com/Bayern4ever-dot/code-light"
Repository = "https://github.com/Bayern4ever-dot/code-light"
Issues = "https://github.com/Bayern4ever-dot/code-light/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_light"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
